@@ -1,3 +1,12 @@
+Changelog 0.2.7:
+Fixed filter function naming
+
+Changelog 0.2.6:
+Fixed Trakt Sync prompting if trakt not authorised
+
+Changelog 0.2.5:
+Fixed issue with clean_title not applying to old version of function
+
 Changelog 0.2.4:
 Added ability to delay Trakt Sync
 Added notice for Initial Trakt Sync with warning about delaying
